Updates to the build system